--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-./webpack
-./test
-./testPromise
-./nodemysql
-./nodejsDBs
-./myblog
-./jsDemo
+webpack/
+test/
+testPromise/
+nodemysql/
+nodejsDBs/
+myblog/
+jsDemo/
 */node_modules
